--- a/userviewpc/package.json
+++ b/userviewpc/package.json
@@ -26,9 +26,10 @@
     "mavon-editor": "^2.10.4",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
-    "vue": "^2.5.2",
-    "stylus-loader": "^3.0.1",
     "stylus": "0.52.4",
+    "stylus-loader": "^3.0.1",
+    "vue": "^2.5.2",
+    "vue-code-diff": "^1.2.0",
     "vue-infinite-scroll": "^2.0.2",
     "vue-mchat": "^1.2.0",
     "vue-router": "^3.0.1"
@@ -50,6 +51,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "monaco-editor": "^0.34.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "node-notifier": "^5.1.2",
     "node-sass": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
