--- a/userviewpc/.gitignore
+++ b/userviewpc/.gitignore
@@ -1,23 +1,17 @@
-# This file is automatically added by @npmcli/template-oss. Do not edit.
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
 
-# ignore everything in the root
-/*
-
-# keep these
-!/.commitlintrc.js
-!/.npmrc
-!/.eslintrc*
-!/.github
-!**/.gitignore
-!/package.json
-!/docs
-!/bin
-!/lib
-!/map.js
-!/tap-snapshots
-!/test
-!/scripts
-!/README*
-!/LICENSE*
-!/SECURITY*
-!/CHANGELOG*
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
