--- a/userviewpc/package.json
+++ b/userviewpc/package.json
@@ -2,38 +2,27 @@
   "name": "whitehole",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "GitHub Inc.",
+  "author": "Huterox <3139541502@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "lint": "eslint '**/*.js'",
-    "postlint": "npm-template-check",
-    "template-copy": "npm-template-copy --force",
-    "lintfix": "npm run lint -- --fix",
-    "preversion": "npm test",
-    "postversion": "npm publish",
-    "prepublishOnly": "git push origin --follow-tags",
-    "snap": "tap",
-    "test": "tap",
-    "posttest": "npm run lint"
+    "build": "node build/build.js"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.1",
     "axios": "^0.26.1",
     "element-ui": "^2.15.6",
     "jwchat": "^1.0.7",
-    "mavon-editor": "^2.10.4",
+    "mavon-editor": "^2.10.0",
     "node-sass": "^7.0.1",
-    "postcss-px2rem": "^0.3.0",
-    "px2rem-loader": "^0.1.9",
     "sass-loader": "^12.6.0",
     "stylus": "0.52.4",
     "stylus-loader": "^3.0.1",
+    "v-code-diff": "^0.3.12",
     "vue": "^2.5.2",
-    "vue-code-diff": "^1.2.0",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-mchat": "^1.2.0",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -53,10 +42,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "monaco-editor": "^0.34.0",
-    "monaco-editor-webpack-plugin": "^7.0.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^7.0.1",
+    "node-sass": "^7.0.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -64,13 +51,12 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^12.6.0",
+    "sass-loader": "^13.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-particles": "^1.0.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
@@ -79,18 +65,12 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": "^12.13.0 || ^14.15.0 || >=16"
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "files": [
-    "bin",
-    "lib"
-  ],
-  "templateOSS": {
-    "version": "2.9.2"
-  }
+  ]
 }
